...
                    onPressed: state.isLoading ? onStop : onReload,
                  ),
                ),
                const _BottomBarSeparator(index: 1),
                Expanded(
                  child: _BottomBarButton(
                    key: const Key('browser-forward-button'),
                    tooltip: 'קדימה',
                    icon: Icons.arrow_back,
                    onPressed: onForward,
                  ),
                ),
                const _BottomBarSeparator(index: 2),
                Expanded(
                  child: _BottomBarButton(
                    key: const Key('browser-back-button'),
                    tooltip: 'חזרה',
                    icon: Icons.arrow_forward,
                    onPressed: onBack,
                  ),
                ),
                const _BottomBarSeparator(index: 3),
                Expanded(
                  child: _BottomBarButton(
                    key: const Key('browser-menu-button'),
                    tooltip: 'אפשרויות נוספות',
                    icon: Icons.more_horiz,
                    onPressed: onMenu,
                  ),
                ),
              ],
...
